# libportal-vala-demo

./: README.md  io.github.diegoivanme.libportal_vala_sample.json  meson.build
data/: io.github.diegoivanme.libportal_vala_sample.appdata.xml.in  io.github.diegoivanme.libportal_vala_sample.desktop.in  io.github.diegoivanme.libportal_vala_sample.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: Application.vala  libportal_vala_sample.gresource.xml  main.vala  meson.build  window.ui
src/Widgets/: AddressList.vala  ColorViewer.vala  DoubleEntryList.vala  EmailRow.vala  EntryList.vala  Page.vala  Window.vala
src/Widgets/Pages/: Account.vala  Background.vala  Camera.vala  ColorPicker.vala  Email.vala  FileChooser.vala  Location.vala  Notification.vala  OpenURI.vala  Screencast.vala  Screenshot.vala  Session.vala  Spawn.vala  TrashFile.vala  Wallpaper.vala  Welcome.vala
src/resources/: libportal_vala_sample.gresource.xml  meson.build  style.css
src/resources/ui/: Accounts.ui  Background.ui  Camera.ui  ColorPicker.ui  Email.ui  FileChooser.ui  Location.ui  Notification.ui  OpenURI.ui  Screencast.ui  Screenshot.ui  Session.ui  Spawn.ui  TrashFile.ui  Wallpaper.ui  Welcome.ui  window.ui
src/vapi/: config.vapi
